--- a/about_us.html
+++ b/about_us.html
@@ -8,7 +8,7 @@
 <link href="http://fonts.cdnfonts.com/css/century-gothic" rel="stylesheet">
 </head>
 
-<body class="container">
+<body class="container" ontouchstart="">
 	<div class="container-nav">
 	<nav>
 		<input id="nav-toggle" type="checkbox">
