--- a/events.html
+++ b/events.html
@@ -62,7 +62,7 @@
 		<div class="image">
 			<img src="img/fall_rally.jpg" alt="fall_rally">
 			<div class="text">
-			<h1>This is training for the officers as well as anyone who wants to run for a position next year! We will also have many member workshops that have training for members! This is one of the most important events of the service year! It is mandatory for all officers to attend!</h1>
+			<h1>Fall Rally is training for the officers as well as anyone who wants to run for a position next year! We will also have many member workshops that have training for members! This is one of the most important events of the service year! It is mandatory for all officers to attend!</h1>
 			<a href="https://nydkc.org/fall-rally/">Learn More</a>
 		</div>
 		</div>
