--- a/about_us.html
+++ b/about_us.html
@@ -10,34 +10,30 @@
 
 <body class="container" ontouchstart="">
 	<div class="container-nav">
-	<nav>
-		<input id="nav-toggle" type="checkbox">
-		<div class="container-logo">
-		<div class="logo">Sitech Key Club</div>
-		</div>
-	   
-		<ul class="links">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="events.html">Events</a></li>
-			<li><a href="members.html">Members</a></li>
-			<li><a href="about_us.html">About Us</a></li>
-			<li><a href="contact_us.html">Contact Us</a></li>
-		</ul>
-
-		<label for="nav-toggle" class="icon-burger">
-			<div class="line"></div>
-			<div class="line"></div>
-			<div class="line"></div>
-		</label>
-	</nav>
+        <nav>
+            <input id="nav-toggle" type="checkbox">
+            <div class="container-logo">
+                <div class="logo">Sitech Key Club</div>
+            </div>
+            <ul class="links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="members.html">Members</a></li>
+                <li><a href="about_us.html">About Us</a></li>
+                <li><a href="contact_us.html">Contact Us</a></li>
+            </ul>
+            <label for="nav-toggle" class="icon-burger">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </label>
+        </nav>
     </div>
-
     <div class="display-image1">
         <div class="display-image1_text">Who We Are</div>
     </div>
     <section class="intro">
-        <div class="image image1">
-        </div>
+        <div class="image image1"></div>
         <div class="image text1">
             <p>Key Club is the one of the largest student-led organizations, spanning internationally. We are beyond volunteers. With a diversity of events, we can become artists, leaders, and many more. Find us being involved in walks, fundraisers, leadership conferences, public activities, and in-school service opportunities. Anyone is welcomed to join!</p>
         </div>
@@ -47,7 +43,6 @@
             The first Key Club formed in 1925 in Sacramento, California, with 11 charter members. This was the idea of two Sacramento Kiwanis Club members, Albert C. Olney and Frank C. Vincent, who also were high school administrators. They approached their Kiwanis club with the idea of starting a junior service club in the high school. It would resemble Kiwanis, have its own classifications based on school interests and hold luncheon meetings.</p>
         </div>
     </section>
-
     <section class="card-container">
         <div class="card-container-title">Levels of Key Club</div>
         <div class="card-container-box">
@@ -75,7 +70,7 @@
         <div class="board-names">
             <div class="board-names-box">
                 <h2>Sharon Zohirova</h2>
-            <p>President</p>
+                <p>President</p>
             </div>
             <div class="board-names-box">
                 <h2>Tiffany Zou</h2>
@@ -83,11 +78,11 @@
             </div>
             <div class="board-names-box">
                 <h2>Secretary</h2>
-            <p>Simon Chan</p>
+                <p>Simon Chan</p>
             </div>
             <div class="board-names-box">
                 <h2>Felicia Chan</h2>
-            <p>Treasurer</p>
+                <p>Treasurer</p>
             </div>
             <div class="board-names-box">
                 <h2>Vicky Chen</h2>
@@ -95,9 +90,11 @@
             </div>
         </div>
     </section>
-
     <section class="banner">
         <p>Caring - Our Way Of Life</p>
+    </section>  
+    <section class="credit">
+        <p>Website Created by Vicky Chen</p>
     </section>
 </body>
 </html>
