--- a/events.html
+++ b/events.html
@@ -8,14 +8,13 @@
 <link href="http://fonts.cdnfonts.com/css/century-gothic" rel="stylesheet">
 </head>
 
-	<body class="container" ontouchstart="">
-		<div class="container-nav">
+<body class="container" ontouchstart="">
+	<div class="container-nav">
 		<nav>
 			<input id="nav-toggle" type="checkbox">
 			<div class="container-logo">
-			<div class="logo">Sitech Key Club</div>
+				<div class="logo">Sitech Key Club</div>
 			</div>
-		   
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="events.html">Events</a></li>
@@ -23,7 +22,6 @@
 				<li><a href="about_us.html">About Us</a></li>
 				<li><a href="contact_us.html">Contact Us</a></li>
 			</ul>
-	
 			<label for="nav-toggle" class="icon-burger">
 				<div class="line"></div>
 				<div class="line"></div>
@@ -31,61 +29,69 @@
 			</label>
 		</nav>
 	</div>
-		
-<br>
-<div class="events">
-	<img src="img/events.jpg" alt="paper" style="width:100%; height:500px;">
-	<div class="middle">EVENTS</div>
-</div>
-<div class="whole">
-	<div class="ongoing_events">
-		<h2>Ongoing</h2>
-		<h3>Charity Miles</h3>
-		<p> This app gives money to a charity of choice by giving 25 cents every mile you walk.  All you have to do is download the app Charity Miles and join our team : NYDKC Division 10 and begin walking. All proceeds will go to The American Lung Association.</p>
-		<h3>Together for Teachers</h3>
-		<p>An event we plan to do refers to the non profit organization: Together for Teachers. This is where Key Club members help teachers from Poland with English online classes once a week while earning community service hours.  You have to sacrifice a certain amount of hours (you can choose the time and amount of hours) every week. If you are interested, fill out this form: </p>
-		<p><a href="https://docs.google.com/forms/d/1GE1vCMDhwKadaedn5JPONyVnsikjXCHbYL3Sr2y1yvE/viewform?ts=5e8f1e76&edit_requested=true" target="_blank">click here</a></p>
-		</div>
-	
-</div>
-<section class="yearly">
-	<h2>Annual Events</h2>
-	
-	<div class="grids">
-		<div class="image">
-			<img src="img/banner.png" alt="banner">
-			<div class="text">
-			<h1>Key Club Week gives you the opportunity to show your community what Key Club is truly about: service. Each day places an emphasis on service, to promote Key Club within our homes, schools and communities and to make Key Club a household name.</h1>
-			<a href="https://nydkc.org/key-club-week/" target="_blank">Learn More</a>
-		</div>
-		</div>
-		<div class="image">
-			<img src="img/fall_rally.jpg" alt="fall_rally">
-			<div class="text">
-			<h1>Fall Rally is training for the officers as well as anyone who wants to run for a position next year! We will also have many member workshops that have training for members! This is one of the most important events of the service year! It is mandatory for all officers to attend!</h1>
-			<a href="https://nydkc.org/fall-rally/">Learn More</a>
-		</div>
-		</div>
-		<div class="image">
-			<img src="img/ltc.jpg" alt="ltc">
-			<div class="text">
-			<h1>LTC is where Key Clubbers all over the district come together and get to know each other through playfair, workshops and all the fun sessions and of course the dance! You also see the district Board retire and get to see who your new District Board is!
-			</h1>
-			<a href="https://nydkc.org/ltc-2/">Learn More</a>
-		</div>
-		</div>
-		<div class="image">
-			<img src="img/icon.jpg" alt="icon">
-			<div class="text">
-			<h1>Key Club International Convention is an event that is like a longer LTC. Instead of being with only the New York District at LTC, you are with International members from around the world!</h1>
-			<a href="https://www.keyclub.org/events/event-2/">Learn More</a>
-		</div>
+	<br>
+	<div class="events">
+		<img src="img/events.jpg" alt="paper" style="width:100%; height:500px;">
+		<div class="middle">EVENTS</div>
 	</div>
-</div>
-</section>
-<section class="banner">
-	<p>Caring - Our Way Of Life</p>
-</section>
+	<div class="whole">
+		<div class="ongoing_events">
+			<h2>Ongoing</h2>
+			<h3>Color A Smile</h3>
+			<p>Color A Smile is a nonprofit organization that distributes cheerful drawings to senior citizens, troops overseas, and anyone in need of a smile. Color these templates with the link below, and mail it to the address.</p>
+			<p><a href=" https://colorasmile.org/volunteer/coloring-pages/" target="_blank">Link</a></p>
+			<h3>Charity Miles</h3>
+			<p>This app gives money to a charity of choice by giving 25 cents every mile you walk. All you have to do is download the app Charity Miles and join our team: NYDKC Division 10 and begin walking. All proceeds will go to The American Lung Association.</p>
+			<h3>Together for Teachers</h3>
+			<p>Key Club members help teachers from Poland with English online classes once a week while earning community service hours. You have to sacrifice a certain amount of hours (you can choose the time and amount of hours) every week. If you are interested, fill out this form: </p>
+			<p><a href="https://docs.google.com/forms/d/1GE1vCMDhwKadaedn5JPONyVnsikjXCHbYL3Sr2y1yvE/viewform?ts=5e8f1e76&edit_requested=true" target="_blank">Form</a></p>
+			<h3>7 Cups</h3>
+			<p>This is a site that allows those who are emotionally distressed to have a platform to talk about issues going on.</p>
+			<p><u>Steps to Take</u></p>
+				<li>Click <a href="https://www.7cups.com" target="_blank">here.</a></li>
+				<li>Press the cup icon and select volunteer as a listener.</li>
+				<li>Create an account.</li>
+				<li>Complete a 30-minute lesson where you will be trained to become an active listener.</li>
+				<li>Once completed you will be trained and can assist others.</li>
+			</p>
+		</div>	
+	</div>
+	<section class="yearly">
+		<h2>Annual Events</h2>
+		<div class="grids">
+			<div class="image">
+				<img src="img/banner.png" alt="banner">
+				<div class="text">
+					<h1>Key Club Week gives you the opportunity to show your community what Key Club is truly about: service. Each day places an emphasis on service, to promote Key Club within our homes, schools and communities and to make Key Club a household name.</h1>
+					<a href="https://nydkc.org/key-club-week/" target="_blank">Learn More</a>
+				</div>
+			</div>
+			<div class="image">
+				<img src="img/fall_rally.jpg" alt="fall_rally">
+				<div class="text">
+					<h1>Fall Rally is training for the officers as well as anyone who wants to run for a position next year! We will also have many member workshops that have training for members! This is one of the most important events of the service year! It is mandatory for all officers to attend!</h1>
+					<a href="https://nydkc.org/fall-rally/">Learn More</a>
+				</div>
+			</div>
+			<div class="image">
+				<img src="img/ltc.jpg" alt="ltc">
+				<div class="text">
+					<h1>LTC is where Key Clubbers all over the district come together and get to know each other through playfair, workshops and all the fun sessions and of course the dance! You also see the district Board retire and get to see who your new District Board is!
+					</h1>
+					<a href="https://nydkc.org/ltc-2/">Learn More</a>
+				</div>
+			</div>
+			<div class="image">
+				<img src="img/icon.jpg" alt="icon">
+				<div class="text">
+					<h1>Key Club International Convention is an event that is like a longer LTC. Instead of being with only the New York District at LTC, you are with International members from around the world!</h1>
+					<a href="https://www.keyclub.org/events/event-2/">Learn More</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="banner">
+		<p>Caring - Our Way Of Life</p>
+	</section>
 </body>
-
 </html>
