--- a/members.html
+++ b/members.html
@@ -10,26 +10,24 @@
 
 <body class="container">
 	<div class="container-nav">
-	<nav>
-		<input id="nav-toggle" type="checkbox">
-		<div class="container-logo">
-		<div class="logo">Sitech Key Club</div>
-		</div>
-	   
-		<ul class="links">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="events.html">Events</a></li>
-			<li><a href="members.html">Members</a></li>
-			<li><a href="about_us.html">About Us</a></li>
-			<li><a href="contact_us.html">Contact Us</a></li>
-		</ul>
-
-		<label for="nav-toggle" class="icon-burger">
-			<div class="line"></div>
-			<div class="line"></div>
-			<div class="line"></div>
-		</label>
-	</nav>
+        <nav>
+            <input id="nav-toggle" type="checkbox">
+            <div class="container-logo">
+                <div class="logo">Sitech Key Club</div>
+            </div>
+            <ul class="links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="members.html">Members</a></li>
+                <li><a href="about_us.html">About Us</a></li>
+                <li><a href="contact_us.html">Contact Us</a></li>
+            </ul>
+            <label for="nav-toggle" class="icon-burger">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </label>
+        </nav>
     </div>
     <div class="image1">
         <div class="image1_text">Members</div>
@@ -40,20 +38,17 @@
         </div>
         <div class="title">
             <h3>Dues</h3>
-            <p>We have annual dues of $13. You may wonder why there is money involved.</p>
-                
-                <p>This money eventually all comes back to you guys through fundraisers and meetings, like LTC and ICON. As long as we have the money to get that first fundraiser going, we can use the money we earned from that to create even more fundraisers, but we need you guys to make the first push.</p>
-                <p>
-                There are many benefits of being a Key Club member, and here are some of them.
-                By being a Key Club member, you are able to: <br>
-                Run for officer/committees positions <br>
-                Vote for our new officers/committee members in March <br>
-                Get service hours <br>
-                Participate and potentially win scholarships <br>
-                Get the awards by the end of the year </p>
-                <p>
-                If you do not pay your dues, we still encourage you to be involved by coming to meetings and going to events. However, we will not keep track of your hours and you will not be able to run for positions.
-                </p>
+            <p>We have annual dues of $13. You may wonder why there is money involved.</p>   
+            <p>This money eventually all comes back to you guys through fundraisers and meetings, like LTC and ICON. As long as we have the money to get that first fundraiser going, we can use the money we earned from that to create even more fundraisers, but we need you guys to make the first push.</p>
+            <p>There are many benefits of being a Key Club member, and here are some of them. By being a Key Club member, you are able to:</p>
+            <div class="title-reasons">
+                <p>Run for officer/committees positions</p>
+                <p>Vote for our new officers/committee members in March</p>
+                <p>Get service hours </p>
+                <p>Participate and potentially win scholarships</p>
+                <p>Get the awards by the end of the year</p>
+            </div>
+            <p>If you do not pay your dues, we still encourage you to be involved by coming to meetings and going to events. However, we will not keep track of your hours and you will not be able to run for positions.</p>
             </div>
     </section>
     <section class="banner">
