--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
 		<div class="box Key_Club_text">
 			<h2>What is Key Club?</h2>
 			<p>Key Club is a student-led high school organization, dedicated to provide service and leadership to many others. We strive to create an impact on the community no matter how big or small it is, growing as individuals and as a team with other members.</p>
-		<div class="announcements">
-			<h3>Quick Announcements</h3>
-			<div class="announcements-text">
-				We host meetings on Zoom. Be sure to subscribe to our email lists!
+			<div class="announcements">
+				<h3>Quick Announcements</h3>
+				<div class="announcements-text">
+					We host meetings on Zoom. Be sure to subscribe to our email lists!
+				</div>
+				<a href="https://docs.google.com/forms/d/e/1FAIpQLScf4UdRWhAjWt-0uCpPzLtBWH727h4Q8UwlN1ik6KjAObK9RQ/viewform" target="_blank">Click Here</a>
 			</div>
-			<a href="https://docs.google.com/forms/d/e/1FAIpQLScf4UdRWhAjWt-0uCpPzLtBWH727h4Q8UwlN1ik6KjAObK9RQ/viewform" target="_blank">Click Here</a>
 		</div>
 	</div>
 	<section class="divisional">
